[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/scenes/VerticalSketchList/VerticalSketchList.gd" type="Script" id=1]

[node name="VerticalSketchList" type="PanelContainer"]
anchor_bottom = 1.0
margin_right = 48.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 41.0
margin_bottom = 593.0

[node name="ContextButton" type="Button" parent="VBox"]
margin_right = 34.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "="

[node name="Scroll" type="ScrollContainer" parent="VBox"]
margin_top = 24.0
margin_right = 34.0
margin_bottom = 586.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBox" type="VBoxContainer" parent="VBox/Scroll"]
margin_right = 34.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="NewButton" type="Button" parent="VBox/Scroll/VBox"]
margin_right = 34.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 0
text = "+"
